--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
                 <a href="oyunlar/la-noire.html" class="game-card">
                     <img src="images/la-noire.webp" alt="L.A. Noire" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">L.A. Noire</h3>
-                        <p class="text-[#b8a3b8]">Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">1940'lar Los Angeles dedektiflik</p>
                     </div>
                 </a>
 
@@ -148,12 +149,13 @@
                 <a href="oyunlar/bully.html" class="game-card">
                     <img src="images/bully.webp" alt="Bully" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Bully</h3>
-                        <p class="text-[#b8a3b8]">2025 Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">Bullworth Academy okul macerası</p>
                     </div>
                 </a>
 
@@ -161,11 +163,12 @@
                 <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card">
                     <img src="images/gta-vice-city-nextgen.webp" alt="GTA Vice City Nextgen" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Nextgen</h3>
-                        <p class="text-[#b8a3b8]">Nextgen Edition Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA: Vice City Nextgen Edition</h3>
+                        <p class="text-[#b8a3b8]">Modernize edilmiş Vice City</p>
                     </div>
                 </a>
 
@@ -173,11 +176,12 @@
                 <a href="oyunlar/rdr-pc.html" class="game-card">
                     <img src="images/rdr-pc.webp" alt="Red Dead Redemption PC" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Red Dead Redemption</h3>
-                        <p class="text-[#b8a3b8]">PC Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">John Marston'ın intikam hikayesi</p>
                     </div>
                 </a>
 
@@ -185,12 +189,13 @@
                 <a href="oyunlar/rdr2.html" class="game-card">
                     <img src="images/rdr2.webp" alt="Red Dead Redemption 2" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2026</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <span class="absolute top-3 right-3 badge-beta rounded text-sm font-bold z-10">BETA</span>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Red Dead Redemption II</h3>
-                        <p class="text-[#b8a3b8]">2026 Türkçe Yama (Beta)</p>
+                        <p class="text-[#b8a3b8]">Arthur Morgan'ın epik destanı</p>
                     </div>
                 </a>
 
@@ -198,12 +203,13 @@
                 <a href="oyunlar/manhunt-2.html" class="game-card">
                     <img src="images/manhunt-2.webp" alt="Manhunt 2" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Manhunt 2</h3>
-                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">Karanlık psikolojik gerilim</p>
                     </div>
                 </a>
 
@@ -211,11 +217,12 @@
                 <a href="oyunlar/manhunt.html" class="game-card">
                     <img src="images/manhunt.webp" alt="Manhunt" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Manhunt</h3>
-                        <p class="text-[#b8a3b8]">2024 Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">Hayatta kalma korku deneyimi</p>
                     </div>
                 </a>
 
@@ -223,11 +230,12 @@
                 <a href="oyunlar/gta-v.html" class="game-card">
                     <img src="images/gta-v.webp" alt="GTA V" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto V</h3>
-                        <p class="text-[#b8a3b8]">Legacy & Enhanced Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA V: Legacy & Enhanced</h3>
+                        <p class="text-[#b8a3b8]">Los Santos'ta üç suçlunun hikayesi</p>
                     </div>
                 </a>
 
@@ -235,13 +243,14 @@
                 <a href="oyunlar/gta-liberty-city-stories.html" class="game-card">
                     <img src="images/gta-liberty-city-stories.webp" alt="GTA Liberty City Stories" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                         <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto: Liberty City Stories</h3>
-                        <p class="text-[#b8a3b8]">2023 Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA: Liberty City Stories</h3>
+                        <p class="text-[#b8a3b8]">Toni Cipriani'nin yükselişi</p>
                     </div>
                 </a>
 
@@ -249,12 +258,13 @@
                 <a href="oyunlar/rdr-goty.html" class="game-card">
                     <img src="images/rdr-goty.webp" alt="Red Dead Redemption GOTY" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
                         <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Xenia</span>
                         <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Ryujinx</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Red Dead Redemption GOTY & Undead Nightmare</h3>
-                        <p class="text-[#b8a3b8]">Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">RDR GOTY & Undead Nightmare</h3>
+                        <p class="text-[#b8a3b8]">Emülatör için tam paket</p>
                     </div>
                 </a>
 
@@ -262,11 +272,12 @@
                 <a href="oyunlar/gta-trilogy-definitive.html" class="game-card">
                     <img src="images/gta-trilogy-definitive.webp" alt="GTA Trilogy Definitive" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto: The Trilogy</h3>
-                        <p class="text-[#b8a3b8]">Definitive Edition Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA: The Trilogy - DE</h3>
+                        <p class="text-[#b8a3b8]">Remastered klasik üçleme</p>
                     </div>
                 </a>
 
@@ -274,12 +285,13 @@
                 <a href="oyunlar/gta-vice-city-stories.html" class="game-card">
                     <img src="images/gta-vice-city-stories.webp" alt="GTA Vice City Stories" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Stories</h3>
-                        <p class="text-[#b8a3b8]">2022 Türkçe Yama</p>
+                        <h3 class="font-semibold text-white">GTA: Vice City Stories</h3>
+                        <p class="text-[#b8a3b8]">Vic Vance'in Vice City macerası</p>
                     </div>
                 </a>
 
@@ -287,12 +299,13 @@
                 <a href="oyunlar/gta-trilogy-classic.html" class="game-card">
                     <img src="images/gta-trilogy-classic.webp" alt="GTA Trilogy Classic" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                         <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
                     </div>
                     <div class="game-card-content">
-                        <h3 class="font-semibold text-white">Grand Theft Auto III, Vice City & San Andreas</h3>
-                        <p class="text-[#b8a3b8]">2023 Türkçe Yamaları</p>
+                        <h3 class="font-semibold text-white">GTA III, Vice City & San Andreas</h3>
+                        <p class="text-[#b8a3b8]">Orijinal klasik üçleme</p>
                     </div>
                 </a>
 
@@ -300,11 +313,12 @@
                 <a href="oyunlar/xiii-classic.html" class="game-card">
                     <img src="images/xiii-classic.webp" alt="XIII Classic" class="game-card-cover">
                     <div class="platform-badges">
+                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">XIII - Classic</h3>
-                        <p class="text-[#b8a3b8]">Türkçe Yama</p>
+                        <p class="text-[#b8a3b8]">Çizgi roman tarzı aksiyon</p>
                     </div>
                 </a>
             </div>
