--- a/genel-cozumler.html
+++ b/genel-cozumler.html
@@ -511,7 +511,7 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-bold text-white">Sorununuz Devam Ediyorsa</h3>
-                            <p class="text-[#b8a3b8] text-sm">Son çare: Ticket oluşturarak ekibimize ulaşın</p>
+                            <p class="text-[#b8a3b8] text-sm">Ticket oluşturarak ekibimize ulaşın</p>
                         </div>
                     </div>
                 </div>
